--- a/src/index.html
+++ b/src/index.html
@@ -17,34 +17,13 @@
 
     <main class="container pt-5">
         <div class="d-flex justify-content-center py-2">
-            <h2>Cari Cocktail yang Anda suka</h2>
+            <h2>looking for the cocktail you like</h2>
         </div>
-
         <search-element></search-element>
-
-
-        <drink-list class="row d-flex justify-content-center align-item-center"></drink-list>
-
+        <drink-list></drink-list>
+        <modal-info></modal-info>
     </main>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer>
         <my-footer></my-footer>
